1.1  ---
New Features/Changes:
 - Selection now uses an easier-to-spot red-black dash instead of just a thick black line
 - Selection now selects multiple hexes by default (you don't need to hold shift down). Control-clicking will deselect all when using the select tool.
Bug Fixes:
 - Cancel button on 'New Map' dialog box now works
 
Performance Improvements:
 - Zooming, scrolling, and drawing hexes are all much faster

1.0b2 May 31, 2003
New Features:
- Added 'Inspector' palette which shows various information about whatever hex is currently under the mouse

Bug Fixes:
- Fixed bug that allowed palettes to show up on startup regardless of 'show/hide' preference


1.0b1 Jan 23, 2003
- Initial version