@@ -1,3 +1,3 @@
 Main-Class: btthud.ui.Thump
-Implementation-Version: Sun Nov  2 23:14:01 PST 2003
+Implementation-Version: Mon Nov  3 23:04:59 PST 2003
 
